# d3d12_playground

./: .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  README.md  index.md
src/: buffer.cpp  buffer.h  buffer.hpp  device.cpp  device.h  fence.cpp  fence.h  gui.cpp  gui.h  main.cpp  mesh.cpp  mesh.h  pch.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h
src/shaders/: color.hlsl  geometry.hlsl
